; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/media/video/tlg2300/extr_pd-dvb.c_dvb_start_streaming.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/media/video/tlg2300/extr_pd-dvb.c_dvb_start_streaming.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pd_dvb_adapter = type { i32, i32*, %struct.poseidon* }
%struct.poseidon = type { i32, i32 }

@POSEIDON_STATE_DISCONNECT = common dso_local global i32 0, align 4
@ENODEV = common dso_local global i32 0, align 4
@PLAY_SERVICE = common dso_local global i32 0, align 4
@DVB_SBUF_NUM = common dso_local global i32 0, align 4
@GFP_KERNEL = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [21 x i8] c" submit urb error %d\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.pd_dvb_adapter*)* @dvb_start_streaming to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @dvb_start_streaming(%struct.pd_dvb_adapter* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.pd_dvb_adapter*, align 8
  %4 = alloca %struct.poseidon*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store %struct.pd_dvb_adapter* %0, %struct.pd_dvb_adapter** %3, align 8
  %8 = load %struct.pd_dvb_adapter*, %struct.pd_dvb_adapter** %3, align 8
  %9 = getelementptr inbounds %struct.pd_dvb_adapter, %struct.pd_dvb_adapter* %8, i32 0, i32 2
  %10 = load %struct.poseidon*, %struct.poseidon** %9, align 8
  store %struct.poseidon* %10, %struct.poseidon** %4, align 8
  store i32 0, i32* %5, align 4
  %11 = load %struct.poseidon*, %struct.poseidon** %4, align 8
  %12 = getelementptr inbounds %struct.poseidon, %struct.poseidon* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = load i32, i32* @POSEIDON_STATE_DISCONNECT, align 4
  %15 = and i32 %13, %14
  %16 = icmp ne i32 %15, 0
  br i1 %16, label %17, label %20

17:                                               ; preds = %1
  %18 = load i32, i32* @ENODEV, align 4
  %19 = sub nsw i32 0, %18
  store i32 %19, i32* %2, align 4
  br label %76

20:                                               ; preds = %1
  %21 = load %struct.poseidon*, %struct.poseidon** %4, align 8
  %22 = getelementptr inbounds %struct.poseidon, %struct.poseidon* %21, i32 0, i32 1
  %23 = call i32 @mutex_lock(i32* %22)
  %24 = load %struct.pd_dvb_adapter*, %struct.pd_dvb_adapter** %3, align 8
  %25 = getelementptr inbounds %struct.pd_dvb_adapter, %struct.pd_dvb_adapter* %24, i32 0, i32 0
  %26 = load i32, i32* %25, align 8
  %27 = icmp ne i32 %26, 0
  br i1 %27, label %70, label %28

28:                                               ; preds = %20
  store i32 0, i32* %7, align 4
  %29 = load %struct.poseidon*, %struct.poseidon** %4, align 8
  %30 = load i32, i32* @PLAY_SERVICE, align 4
  %31 = call i32 @send_set_req(%struct.poseidon* %29, i32 %30, i32 1, i32* %7)
  store i32 %31, i32* %5, align 4
  %32 = load i32, i32* %5, align 4
  %33 = load i32, i32* %7, align 4
  %34 = or i32 %32, %33
  %35 = icmp ne i32 %34, 0
  br i1 %35, label %36, label %37

36:                                               ; preds = %28
  br label %71

37:                                               ; preds = %28
  %38 = load %struct.pd_dvb_adapter*, %struct.pd_dvb_adapter** %3, align 8
  %39 = call i32 @dvb_urb_init(%struct.pd_dvb_adapter* %38)
  store i32 %39, i32* %5, align 4
  %40 = load i32, i32* %5, align 4
  %41 = icmp slt i32 %40, 0
  br i1 %41, label %42, label %43

42:                                               ; preds = %37
  br label %71

43:                                               ; preds = %37
  %44 = load %struct.pd_dvb_adapter*, %struct.pd_dvb_adapter** %3, align 8
  %45 = getelementptr inbounds %struct.pd_dvb_adapter, %struct.pd_dvb_adapter* %44, i32 0, i32 0
  store i32 1, i32* %45, align 8
  store i32 0, i32* %6, align 4
  br label %46

46:                                               ; preds = %66, %43
  %47 = load i32, i32* %6, align 4
  %48 = load i32, i32* @DVB_SBUF_NUM, align 4
  %49 = icmp slt i32 %47, %48
  br i1 %49, label %50, label %69

50:                                               ; preds = %46
  %51 = load %struct.pd_dvb_adapter*, %struct.pd_dvb_adapter** %3, align 8
  %52 = getelementptr inbounds %struct.pd_dvb_adapter, %struct.pd_dvb_adapter* %51, i32 0, i32 1
  %53 = load i32*, i32** %52, align 8
  %54 = load i32, i32* %6, align 4
  %55 = sext i32 %54 to i64
  %56 = getelementptr inbounds i32, i32* %53, i64 %55
  %57 = load i32, i32* %56, align 4
  %58 = load i32, i32* @GFP_KERNEL, align 4
  %59 = call i32 @usb_submit_urb(i32 %57, i32 %58)
  store i32 %59, i32* %5, align 4
  %60 = load i32, i32* %5, align 4
  %61 = icmp ne i32 %60, 0
  br i1 %61, label %62, label %65

62:                                               ; preds = %50
  %63 = load i32, i32* %5, align 4
  %64 = call i32 @log(i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str, i64 0, i64 0), i32 %63)
  br label %71

65:                                               ; preds = %50
  br label %66

66:                                               ; preds = %65
  %67 = load i32, i32* %6, align 4
  %68 = add nsw i32 %67, 1
  store i32 %68, i32* %6, align 4
  br label %46

69:                                               ; preds = %46
  br label %70

70:                                               ; preds = %69, %20
  br label %71

71:                                               ; preds = %70, %62, %42, %36
  %72 = load %struct.poseidon*, %struct.poseidon** %4, align 8
  %73 = getelementptr inbounds %struct.poseidon, %struct.poseidon* %72, i32 0, i32 1
  %74 = call i32 @mutex_unlock(i32* %73)
  %75 = load i32, i32* %5, align 4
  store i32 %75, i32* %2, align 4
  br label %76

76:                                               ; preds = %71, %17
  %77 = load i32, i32* %2, align 4
  ret i32 %77
}

declare dso_local i32 @mutex_lock(i32*) #1

declare dso_local i32 @send_set_req(%struct.poseidon*, i32, i32, i32*) #1

declare dso_local i32 @dvb_urb_init(%struct.pd_dvb_adapter*) #1

declare dso_local i32 @usb_submit_urb(i32, i32) #1

declare dso_local i32 @log(i8*, i32) #1

declare dso_local i32 @mutex_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
